initial working copy

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding: 100px;
 }
 
 .App-logo {
@@ -19,4 +20,92 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.titles_black{
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.subTitles{
+  color: gray;
+  font-size: 16px;
+}
+
+.text_small{
+  color: gray;
+  font-size: 10px;
+}
+
+.filterContainer{
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid gray;
+}
+
+.nav{
+  padding: 5px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.navContainer{
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid gray;
+}
+
+.navActive{
+  border-bottom: 1px solid orange;
+}
+
+.text-input {
+  border: 1px solid gray;
+  border-radius: 5px;
+  width: 50%;
+  margin-top: 10px;
+  height: 2rem;
+  font-size: 1rem;
+  padding: 5px;
+}
+
+.select {
+  border: 1px solid #1c88bf;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 300;
+  width: 100px;
+  margin-top: 0.2rem;
+  background-color: white;
+  height: 2rem;
+}
+
+img{
+  width: 150px;
+}
+
+.listItem{
+  padding: 0.7rem;
+  margin-bottom: 10px;
+  border-bottom: 1px solid gray;
+  text-align: left;
+}
+
+.repoTitle{
+  color: #1c88bf;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.githubContainer{
+  display: flex
+}
+
+.profileContainer{
+  width: 25%
+}
+
+.repositoryContainer{
+  width: 75%
 }
